--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,11 +2,11 @@
 <div class="container" style="color:white; padding-top:50px; height:25%; margin-bottom:35px;">
 <div style="text-align:center;">
     <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
-        <h1><strong>We do payments differently</strong></h1>
+        <h1 style="color:white;"><strong>We do payments differently</strong></h1>
         <h2 style="margin-top:5px;">Let's figure out how you can start accepting payments today, your way</h2>
     </div>    
   <br><br>
-  <p><a id="expertCall" class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</a></p>
+  <p><a id="expertCall" onclick="expertModal()" class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</a></p>
 </div>
  <br><br>
 <div class="row" >
@@ -36,4 +36,3 @@
 </div>    
 </div>
 </div>
-
