--- a/app/views/about.html
+++ b/app/views/about.html
@@ -17,65 +17,59 @@
   </div>
   <ul class="timeline">
     <li>
-      <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+      <div class="timeline-badge success"><i class="fa fa-credit-card"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+          <h4 class="timeline-title">2000</h4>
+<!--          <p><small class="text-muted"><i class="fa fa-credit-card"></i></small></p>-->
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>CSI processes first payment with Escambia County Tax Collector.</p>
         </div>
       </div>
     </li>
     <li class="timeline-inverted">
-      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-badge success"><i class="fa fa-usd"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">2004</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-          <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere
-            pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing
-            elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+          <p>First billion dollars processed in a year.</p>
         </div>
       </div>
     </li>
     <li>
-      <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
+      <div class="timeline-badge info"><i class="fa fa-briefcase"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">2005</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>Collector Solutions, Inc. wins its first state-wide contract.</p>
         </div>
       </div>
     </li>
     <li class="timeline-inverted">
+     <div class="timeline-badge success"><i class="fa fa-money"></i></div>    
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">2007</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>2 billion dollars processed in a year.</p>
         </div>
       </div>
     </li>
     <li>
-      <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
+      <div class="timeline-badge info"><i class="fa fa-random"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">2007</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>Collector Solutions, Inc. partners with significant Utilities CIS provider.</p>
+<!--
           <hr>
           <div class="btn-group">
             <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
@@ -89,9 +83,11 @@
               <li><a href="#">Separated link</a></li>
             </ul>
           </div>
+-->
         </div>
       </div>
     </li>
+<!--
     <li>
       <div class="timeline-panel">
         <div class="timeline-heading">
@@ -103,15 +99,37 @@
         </div>
       </div>
     </li>
+-->
     <li class="timeline-inverted">
-      <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+      <div class="timeline-badge info"><i class="fa fa-user"></i></div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+          <h4 class="timeline-title">2010</h4>
         </div>
         <div class="timeline-body">
-          <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.
-            Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+          <p>Collector Solutions, Inc. reaches its 100 client milestone.</p>
+        </div>
+      </div>
+    </li>
+       <li>
+      <div class="timeline-badge info"><i class="fa fa-users"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">2011</h4>
+        </div>
+        <div class="timeline-body">
+          <p>Collector Solutions, Inc. client base doubles in a year to 200.</p>
+        </div>
+      </div>
+    </li>
+       <li class="timeline-inverted">
+      <div class="timeline-badge success"><i class="fa fa-globe"></i></div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">Today</h4>
+        </div>
+        <div class="timeline-body">
+            <p>Collector Solutions, Inc. processes <strong>$4 billion</strong> in a year &amp; tops <strong>298 clients</strong>.</p>
         </div>
       </div>
     </li>
