--- a/app/styles/_bootswatch.scss
+++ b/app/styles/_bootswatch.scss
@@ -101,7 +101,7 @@ box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.2);
 }
 body{
 overflow-x:hidden !important;
-background-color: #1A2817;    
+background-color: #fff;    
 }
 html, body{
  height:100%;   
