--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,75 +1,79 @@
-
 <div class="row" style="background-color:#fff; padding-top:100px; margin-top:-8%; min-height:600px;">
-  <div class="container">
-    <div class="col-xs-12" style="color:#1b1b1b; text-align:left; padding:50px; padding-top:50px;">
-     
-      <h1>About CSI</h1>
-       <img class="img-thumbnail" style="height:auto; width:auto; max-width:450px; max-height:450px; float:right; margin-left:25px;" src="http://collectorsolutions.com/images/group.jpg" alt="group photo"/>
-          <p style="width:100%;">Since inception in 1999 the goal has been to provide multiple methods of payment, collection, billing, data movement with unsurpassed protection of data and funds. To date there has been no compromise. CSI’s core principles have always put the client’s needs and their customer’ payment preferences first. CSI understands that customers shape the payment options that clients expect CSI to provide. CSI is prepared for the ‘cashless society’. 
-              <p>
-          CSI’s growth this last decade was with the electronic processing of credit card, debit card, and electronic check payments. CSI’s ‘elastic’ technology platform is poised for quick adoption and adaptation of future client expectations. This exceptionally-responsive payment solution demands a sophistication that distinguishes CSI from its competition.</p>
-        <h1>CSI's Mission</h1>
-          <p>The CSI mission is to provide its clients with an integrated solution; satisfying diverse cultural, technological, business, financial and data integration demand on internet-enabled platforms. These platforms integrate the client solution with all related industry partners. Empowering them with the ability to bridge their business enterprise packages into one unified solution.</p>
-       
-      <div class="">
-  <div class="page-header">
-    <h1 id="timeline">Putting Clients First Is What Has Allowed Us To Grow</h1>
-  </div>
-  <ul class="timeline">
-    <li>
-      <div class="timeline-badge success"><i class="fa fa-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">2000</h4>
-<!--          <p><small class="text-muted"><i class="fa fa-credit-card"></i></small></p>-->
-        </div>
-        <div class="timeline-body">
-          <p>CSI processes first payment with Escambia County Tax Collector.</p>
-        </div>
-      </div>
-    </li>
-    <li class="timeline-inverted">
-      <div class="timeline-badge success"><i class="fa fa-usd"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">2004</h4>
-        </div>
-        <div class="timeline-body">
-          <p>First billion dollars processed in a year.</p>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="timeline-badge info"><i class="fa fa-briefcase"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">2005</h4>
-        </div>
-        <div class="timeline-body">
-          <p>Collector Solutions, Inc. wins its first state-wide contract.</p>
-        </div>
-      </div>
-    </li>
-    <li class="timeline-inverted">
-     <div class="timeline-badge success"><i class="fa fa-money"></i></div>    
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">2007</h4>
-        </div>
-        <div class="timeline-body">
-          <p>2 billion dollars processed in a year.</p>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="timeline-badge info"><i class="fa fa-random"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">2007</h4>
-        </div>
-        <div class="timeline-body">
-          <p>Collector Solutions, Inc. partners with significant Utilities CIS provider.</p>
-<!--
+    <div class="container">
+        <div class="col-xs-12" style="color:#1b1b1b; text-align:left; padding:50px; padding-top:50px;">
+            <div class="row">
+                <img class="img-thumbnail img-responsive center-block" style="height:auto; width:auto; max-width:450px; max-height:450px;" src="images/group.jpg" alt="group photo" />
+                <h1>About CSI</h1>
+                <p>Since inception in 1999 the goal has been to provide multiple methods of payment, collection, billing, data movement with unsurpassed protection of data and funds. To date there has been no compromise. CSI’s core principles have always put the client’s needs and their customer’ payment preferences first. CSI understands that customers shape the payment options that clients expect CSI to provide. CSI is prepared for the ‘cashless society’.
+                    <p>
+                        CSI’s growth this last decade was with the electronic processing of credit card, debit card, and electronic check payments. CSI’s ‘elastic’ technology platform is poised for quick adoption and adaptation of future client expectations. This exceptionally-responsive payment solution demands a sophistication that distinguishes CSI from its competition.</p>
+                    <h1>CSI's Mission</h1>
+                    <p>The CSI mission is to provide its clients with an integrated solution; satisfying diverse cultural, technological, business, financial and data integration demand on internet-enabled platforms. These platforms integrate the client solution with all related industry partners. Empowering them with the ability to bridge their business enterprise packages into one unified solution.</p>
+            </div>
+            <div class="">
+                <div class="page-header">
+                    <h1 id="timeline" style="width:100% !important;">Putting Clients First Is What Has Allowed Us To Grow</h1>
+                </div>
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-badge success"><i class="fa fa-credit-card"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">2000</h4>
+                                <!--          <p><small class="text-muted"><i class="fa fa-credit-card"></i></small></p>-->
+                            </div>
+                            <div class="timeline-body">
+                                <p>CSI processes first payment with Escambia County Tax Collector.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-badge success"><i class="fa fa-usd"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">2004</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>First billion dollars processed in a year.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-badge info"><i class="fa fa-briefcase"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">2005</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Collector Solutions, Inc. wins its first state-wide contract.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-badge success"><i class="fa fa-money"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">2007</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>2 billion dollars processed in a year.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-badge info"><i class="fa fa-random"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">2007</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Collector Solutions, Inc. partners with significant Utilities CIS provider.</p>
+                                <!--
           <hr>
           <div class="btn-group">
             <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
@@ -84,10 +88,10 @@
             </ul>
           </div>
 -->
-        </div>
-      </div>
-    </li>
-<!--
+                            </div>
+                        </div>
+                    </li>
+                    <!--
     <li>
       <div class="timeline-panel">
         <div class="timeline-heading">
@@ -100,44 +104,44 @@
       </div>
     </li>
 -->
-    <li class="timeline-inverted">
-      <div class="timeline-badge info"><i class="fa fa-user"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">2010</h4>
+                    <li class="timeline-inverted">
+                        <div class="timeline-badge info"><i class="fa fa-user"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">2010</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Collector Solutions, Inc. reaches its 100 client milestone.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-badge info"><i class="fa fa-users"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">2011</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Collector Solutions, Inc. client base doubles in a year to 200.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-badge success"><i class="fa fa-globe"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">Today</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p>Collector Solutions, Inc. processes <strong>$4 billion</strong> in a year &amp; tops <strong>298 clients</strong>.</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="timeline-body">
-          <p>Collector Solutions, Inc. reaches its 100 client milestone.</p>
-        </div>
-      </div>
-    </li>
-       <li>
-      <div class="timeline-badge info"><i class="fa fa-users"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">2011</h4>
-        </div>
-        <div class="timeline-body">
-          <p>Collector Solutions, Inc. client base doubles in a year to 200.</p>
-        </div>
-      </div>
-    </li>
-       <li class="timeline-inverted">
-      <div class="timeline-badge success"><i class="fa fa-globe"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Today</h4>
-        </div>
-        <div class="timeline-body">
-            <p>Collector Solutions, Inc. processes <strong>$4 billion</strong> in a year &amp; tops <strong>298 clients</strong>.</p>
-        </div>
-      </div>
-    </li>
-  </ul>
-</div>
-      
     </div>
-      
-      </div>
-    
 </div>
