--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,38 +1,52 @@
-
-<div class="container" style="color:white; padding-top:50px; height:25%; margin-bottom:35px;">
-<div style="text-align:center;">
-    <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
-        <h1 style="color:white;"><strong>We do payments differently</strong></h1>
-        <h2 style="margin-top:5px;">Let's figure out how you can start accepting payments today, your way</h2>
-    </div>    
-  <br><br>
-  <p><a id="expertCall" onclick="expertModal()" class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</a></p>
-</div>
- <br><br>
-<div class="row" >
-  <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
-      <div class="bullet-box-shadow">
-      <h4><strong>Simple Settlement</strong></h4>
-      <i class="fa fa-check"></i> 24 Hour Batches<br>
-      <i class="fa fa-check"></i> Cards &amp; Checks Separate<br>
-      <i class="fa fa-check"></i> Settlements always match reports<br>
+<div class="container" style="color:white; padding-top:50px; height:25%; margin-bottom:35px; padding-bottom:25px;">
+     <div class="row" style="min-height:45px;">
+            <!--  dummy margin     -->
     </div>
-    </div>  
- <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
-     <div class="bullet-box-shadow">
-     <h4><strong>Industry-Leading Service</strong></h4>
-   <i class="fa fa-check"></i> Talk to a LIVE expert within moments<br>
-      <i class="fa fa-check"></i> Speedy resolution upon notification<br>
-      <i class="fa fa-check"></i> 97% of service calls resolved within 2 days<br>
-     </div>
-</div>    
- <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
-    <div class="bullet-box-shadow">
-     <h4><strong>Industry-Standard Security</strong></h4>
-   <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider<br>
-      <i class="fa fa-check"></i> SSAE-16 Compliant<br>
-      <i class="fa fa-check"></i> NACHA Compliant<br>
-     </div>    
-</div>    
-</div>
+    <div style="text-align:center;">
+        <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
+            <h1 style="color:white; font-size:45px;"><strong>We do payments differently</strong></h1>
+            <h2 style="margin-top:5px;"><strong>Let's figure out how you can start accepting payments today, your way</strong></h2>
+        </div>
+        <br>
+        <br>
+        <p><a id="expertCall" onclick="expertModal()" class="btn btn-lg btn-success" ng-href="#/">TALK TO AN EXPERT</a>
+        </p>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
+            <div class="bullet-box-shadow">
+                <h4><strong>Simple Settlement</strong></h4>
+                <i class="fa fa-check"></i> 24 Hour Batches
+                <br>
+                <i class="fa fa-check"></i> Cards &amp; Checks Separate
+                <br>
+                <i class="fa fa-check"></i> Settlements always match reports
+                <br>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
+            <div class="bullet-box-shadow">
+                <h4><strong>Industry-Leading Service</strong></h4>
+                <i class="fa fa-check"></i> Talk to a LIVE expert within moments
+                <br>
+                <i class="fa fa-check"></i> Speedy resolution upon notification
+                <br>
+                <i class="fa fa-check"></i> 97% of service calls resolved within 2 days
+                <br>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
+            <div class="bullet-box-shadow">
+                <h4><strong>Industry-Standard Security</strong></h4>
+                <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider
+                <br>
+                <i class="fa fa-check"></i> SSAE-16 Compliant
+                <br>
+                <i class="fa fa-check"></i> NACHA Compliant
+                <br>
+            </div>
+        </div>
+    </div>
 </div>
