--- a/app/views/solution.html
+++ b/app/views/solution.html
@@ -1,71 +1,66 @@
 <div class="row" style="background-color:#fff; padding-top:100px; margin-top:-8%; min-height:600px;">
-  <div class="container" style="">
-     
-    <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
-        <section role="features">
-  <div class="">
-    <h1>Collector Solutions, Inc. Offers Innovative Solutions</h1>
-    <hr>
-      <div class="row">
-      <div class="">
-        <div class="achL-01 landICON"></div>
-        <h3>Virtual Terminal</h3>
-        <p>Each Merchant Account comes with our powerful</p>
-      </div>
-      <div class="">
-        <div class="achL-02 landICON"></div>
-        <h3>Detailed Client Reporting</h3>
-        <p>Keep real-time tabs on how your business is operating using our online and real-time reporting capabilities</p>
-      </div>
-      <div class="">
-        <div class="achL-03 landICON"></div>
-        <h3>Recurring transactions</h3>
-        <p>Put your billing on auto-pilot with our recurring transaction engine</p>
-      </div>
+    <div class="container" style="">
+        <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
+            <section role="features">
+                <div class="">
+                    <h1>Collector Solutions, Inc. Offers Innovative Solutions</h1>
+                    <hr>
+                    <div style="margin-left:15px;">
+                        <div class="row">
+                            <div class="">
+                                <h3 class="solutionHeader">Virtual Terminal</h3>
+                                <p>Process credit card and ACH transactions from any computer with Internet access anywhere in the world.</p>
+                            </div>
+                            <br/>
+                            <div class="">
+                                <h3 class="solutionHeader">Detailed Client Reporting</h3>
+                                <p>Maximize operating efficiency using our real-time reporting capabilities.</p>
+                            </div>
+                            <br/>
+                            <div class="">
+                                <h3 class="solutionHeader">Recurring Payments</h3>
+                                <p>Preauthorized payments using our recurring payment engine.</p>
+                            </div>
+                            <br/>
+                        </div>
+                        <div class="row">
+                            <div class="">
+                                <h3 class="solutionHeader">Notifications and alerts</h3>
+                                <p>Send out customized reminders, receipts and other notifications.</p>
+                            </div>
+                            <br/>
+                            <div class="">
+                                <h3 class="solutionHeader">Bill Presentment</h3>
+                                <p>Allow customers to access and manage their accounts.</p>
+                            </div>
+                            <br/>
+                        </div>
+                        <div class="row">
+                            <div class="">
+                                <h3 class="solutionHeader">Payment tokenization</h3>
+                                <p>PCI compliant, payment information remains encrypted throughout settlement process.</p>
+                            </div>
+                            <br/>
+                            <div class="">
+                                <h3 class="solutionHeader">SOAP and RESTful API's</h3>
+                                <p>Integrate your payment processes using our flexible <a href="http://api.collectorsolutions.com/">API</a>.</p>
+                            </div>
+                            <br/>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="row" style="margin-bottom:25px;">
+                <hr>
+                <br/>
+                <div class="col-xs-12 col-md-4"> <img src="images/gene.jpg" class="img-thumbnail img-responsive center-block" alt="Gene Valentino">
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <div style="padding-top:75px; font-style:italic; font-size:20px; text-align:center;"><strong>"CollectorSolutions was founded with a core principle: That its operating platform would be a client-based solution addressing business efficiency."<br/><br/>- Gene M. Valentino, Founder &amp; CEO</strong>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <div class="">
-        <div class="achL-04 landICON"></div>
-        <h3>Notifications and alerts</h3>
-        <p>Send out customized reminders, receipts and other notifications automatically</p>
-      </div>
-      <div class="">
-        <div class="achL-05 landICON"></div>
-        <h3>Smart re-presentment</h3>
-        <p>Schedule recollection when your chances are highest using strategic re-presentment logic</p>
-      </div>
-      <div class="">
-        <div class="achL-06 landICON"></div>
-        <h3>Automatic account correction</h3>
-        <p>Our proprietary account updater automatically checks and corrects the account information for each transaction to ensure accuracy</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="">
-        <div class="achL-07 landICON"></div>
-        <h3>Payment tokenization</h3>
-        <p>Fully compliant with Visa's best practices, payment information remains encrypted all the way through settlement</p>
-      </div>
-      <div class="">
-        <div class="achL-08 landICON"></div>
-        <h3>Sunday processing</h3>
-        <p>Initiate ACH transactions on Sunday (to post as soon as Monday to customer accounts) for no additional charge</p>
-      </div>
-      <div class="">
-        <div class="achL-09 landICON"></div>
-        <h3>Late cut-off times</h3>
-        <p>Forte's ACH processing services feature some of the industry's latest cut-off times for next-day funds availability</p>
-      </div>
-      <div class="">
-        <div class="achL-10 landICON"></div>
-        <h3>SOAP and RESTful API's</h3>
-        <p>Realize the full potential of electronic payments by integrating your payment and accounting processes</p>
-      </div>
-    </div>
-    
-    <!-- End of Features -->
-    
-    </div></section>
-    </div>
-</div>
 </div>
