--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -87,11 +87,29 @@
 
 body {
   overflow-x: hidden !important;
-  background-color: #1A2817; }
+  background-color: #fff; 
+background-image: url("../images/bg2.png");
+}
 
 html, body {
-  height: 100%; }
-
+  height: 100%; 
+  -ms-overflow-style: none !important; 
+}
+@-ms-viewport {
+    width: auto;
+}
+@media (max-width: 768px) {
+.center-block{
+    float:none;
+    margin:10px 0;
+}
+}
+@media (min-width: 768px) {
+.center-block{
+    float:right;
+    margin:75px 15px;
+}
+}
 .title-feed span {
   text-shadow: 1px 1px 1px #000;
   font-size: 48px;
@@ -255,7 +273,9 @@ h1 {
 
 .modal-open[style] {
   padding-right: 0px !important; }
-
+.solutionHeader{
+   display:inline; color:#305729; 
+}
 .navbar {
   border: none;
   border-radius: 0;
