--- a/app/views/media.html
+++ b/app/views/media.html
@@ -1,23 +1,26 @@
 <div class="row" style="background-color:#fff; padding-top:125px; margin-top:-8%; min-height:600px;">
-  <div class="container" style="">
-    <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
-      <div class="col-xs-3" style="margin-top:17px;"><h4>Collector Solutions, Inc.</h4>
-          <span style="font-size:12px;">All files are in PDF format. You will need the latest version of <a href="http://get.adobe.com/reader/" target="_blank">Adobe Reader</a> to view.</span></div> 
-     <div class="col-xs-1">
-      
-    </div> 
-      <div class="col-xs-8"><h2 style="color:#305729;">Collector Solutions, Inc. Newsletter</h2>
-      <h3>Newsletters 2015</h3>
-          <p style=" line-height:2em;">
-          <i class="fa fa-file-text-o" style="margin-right:10px;"></i>June 06, 2015: <a href="newsletters/csi_qtr_2_2015.pdf" target="_blank">CSI Quarter two Newsletter 2015</a><br/>
-          <i class="fa fa-file-text-o" style="margin-right:10px;"></i>September 06, 2015: <a href="newsletters/csi_qtr_3_2015.pdf" target="_blank">CSI Quarter three Newsletter 2015</a> </p>
-<!--
+    <div class="container" style="">
+        <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
+            <div class="col-xs-12 col-md-3" style="margin-top:17px;">
+                <h4>Collector Solutions, Inc.</h4>
+                <span style="font-size:12px;">All files are in PDF format. You will need the latest version of <a href="http://get.adobe.com/reader/" target="_blank">Adobe Reader</a> to view.</span>
+            </div>
+            <div class="col-xs-12 col-md-1">
+            </div>
+            <div class="col-xs-12 col-md-8">
+                <h2 style="color:#305729;">Collector Solutions, Inc. Newsletter</h2>
+                <h3>Newsletters 2015</h3>
+                <p style=" line-height:2em;">
+                    <i class="fa fa-file-text-o" style="margin-right:10px;"></i>June 06, 2015: <a href="newsletters/csi_qtr_2_2015.pdf" target="_blank">CSI Quarter two Newsletter 2015</a>
+                    <br/>
+                    
+                <!--
      <h3>Newsletters 2016</h3>
           <p style=" line-height:2em;">
           <i class="fa fa-file-text-o" style="margin-right:10px;"></i>June 06, 2015: <a href="newsletters/csi_qtr_2_2015.pdf" target="_blank">CSI Quarter two Newsletter 2015</a><br/>
           <i class="fa fa-file-text-o" style="margin-right:10px;"></i>September 06, 2015: <a href="newsletters/csi_qtr_3_2015.pdf" target="_blank">CSI Quarter three Newsletter 2015</a> </p>      
 -->
-    </div> 
+            </div>
+        </div>
     </div>
-</div>
 </div>
