--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -80,7 +80,7 @@
 .bullet-box-shadow {
   padding: 5px 10px 25px;
   border: 3px solid rgba(0, 0, 0, 0.2);
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.9);
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2); }
@@ -110,6 +110,16 @@ html, body {
     margin:75px 15px;
 }
 }
+.rslidesContainer{
+    position:fixed; 
+    z-index:0;
+    top:118px;
+}
+@media (max-width: 768px) {
+ .rslidesContainer{
+    top:48px;
+}   
+}
 .title-feed span {
   text-shadow: 1px 1px 1px #000;
   font-size: 48px;
@@ -121,7 +131,7 @@ html, body {
   background-color: rgba(0, 0, 0, 0.1);
   color: white;
   border: none;
-  position: fixed;
+  position: relative;
   top: 118px;
   text-align: center;
   z-index: 999;
