--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
     <br>
     <br>
     <div class="row">
-        <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
+        <div class="col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-0" style="padding-bottom:10px;">
             <div class="bullet-box-shadow">
                 <h4><strong>Simple Settlement</strong></h4>
                 <i class="fa fa-check"></i> 24 Hour Batches
@@ -26,7 +26,7 @@
                 <br>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
+        <div class="col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-0" style="padding-bottom:10px;">
             <div class="bullet-box-shadow">
                 <h4><strong>Industry-Leading Service</strong></h4>
                 <i class="fa fa-check"></i> Talk to a LIVE expert within moments
@@ -37,7 +37,7 @@
                 <br>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-4" style="padding-bottom:5px;">
+        <div class="col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-0" style="padding-bottom:10px;">
             <div class="bullet-box-shadow">
                 <h4><strong>Industry-Standard Security</strong></h4>
                 <i class="fa fa-check"></i> PCI DSS Level 1 Service Provider
