--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,15 +1,17 @@
-<div class="row" style="background-color:#fff; padding-top:100px; margin-top:-8%; min-height:600px;">
+<div class="row" style="background-color:#fff; margin-top:-150px; padding-top:250px; min-height:600px;">
     <div class="container">
-        <div class="col-xs-12" style="color:#1b1b1b; text-align:left; padding:50px; padding-top:50px;">
+        <div class="col-xs-12" style="color:#1b1b1b; text-align:left; padding:50px;">
             <div class="row">
-                <img class="img-thumbnail img-responsive center-block" style="height:auto; width:auto; max-width:450px; max-height:450px;" src="images/group.jpg" alt="group photo" />
+               <img class="img-thumbnail img-responsive center-block" style="height:auto; width:auto; min-width:250px; max-height:450px; min-height:250px;" src="images/group.jpg" alt="group photo" />
                 <h1>About CSI</h1>
+                
                 <p>Since inception in 1999 the goal has been to provide multiple methods of payment, collection, billing, data movement with unsurpassed protection of data and funds. To date there has been no compromise. CSI’s core principles have always put the client’s needs and their customer’ payment preferences first. CSI understands that customers shape the payment options that clients expect CSI to provide. CSI is prepared for the ‘cashless society’.
                     <p>
                         CSI’s growth this last decade was with the electronic processing of credit card, debit card, and electronic check payments. CSI’s ‘elastic’ technology platform is poised for quick adoption and adaptation of future client expectations. This exceptionally-responsive payment solution demands a sophistication that distinguishes CSI from its competition.</p>
                     <h1>CSI's Mission</h1>
                     <p>The CSI mission is to provide its clients with an integrated solution; satisfying diverse cultural, technological, business, financial and data integration demand on internet-enabled platforms. These platforms integrate the client solution with all related industry partners. Empowering them with the ability to bridge their business enterprise packages into one unified solution.</p>
             </div>
+             
             <div class="">
                 <div class="page-header">
                     <h1 id="timeline" style="width:100% !important;">Putting Clients First Is What Has Allowed Us To Grow</h1>
