--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,4 @@
-<div class="container" style="color:white; padding-top:50px; height:25%; margin-bottom:35px; padding-bottom:25px;">
-     <div class="row" style="min-height:45px;">
-            <!--  dummy margin     -->
-    </div>
+<div class="container" style="color:white; padding-top:50px; height:25%; margin-bottom:35px; margin-top:8%; padding-bottom:25px;">
     <div style="text-align:center;">
         <div style="text-shadow: 1px 1px 1px #000; font-style:italic;">
             <h1 style="color:white; font-size:45px;"><strong>We do payments differently</strong></h1>
