--- a/app/views/solution.html
+++ b/app/views/solution.html
@@ -1,4 +1,4 @@
-<div class="row" style="background-color:#fff; padding-top:100px; margin-top:-8%; min-height:600px;">
+<div class="row" style="background-color:#fff; margin-top:-150px; padding-top:250px; min-height:800px;">
     <div class="container" style="">
         <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
             <section role="features">
@@ -53,10 +53,10 @@
             <div class="row" style="margin-bottom:25px;">
                 <hr>
                 <br/>
-                <div class="col-xs-12 col-md-4"> <img src="images/gene.jpg" class="img-thumbnail img-responsive center-block" alt="Gene Valentino">
+                <div class="col-xs-12 col-md-4"> <img src="images/gene.jpg" class="img-thumbnail img-responsive" style="margin-left:auto; margin-right:auto; display:block;" alt="Gene Valentino">
                 </div>
                 <div class="col-xs-12 col-md-6">
-                    <div style="padding-top:75px; font-style:italic; font-size:20px; text-align:center;"><strong>"CollectorSolutions was founded with a core principle: That its operating platform would be a client-based solution addressing business efficiency."<br/><br/>- Gene M. Valentino, Founder &amp; CEO</strong>
+                    <div style="padding-top:40px; font-style:italic; font-size:20px; text-align:center;"><strong>"CollectorSolutions was founded with a core principle: That its operating platform would be a client-based solution addressing business efficiency."</strong><br/><br/><span style="font-size:16px;">- Gene M. Valentino, Founder &amp; CEO</span>
                     </div>
                 </div>
 
