--- a/app/views/policy.html
+++ b/app/views/policy.html
@@ -1,4 +1,4 @@
-<div class="row" style="background-color:#fff; padding-top:100px; margin-top:-8%; min-height:600px;">
+<div class="row" style="background-color:#fff; margin-top:-150px; padding-top:250px; min-height:800px;">
   <div class="container" style="">
     <div class="col-xs-12" style="color:#3f3f3f; text-align:left; padding:50px;">
          <h1 style="color:#4e8c42; text-align:left;">Privacy Policy</h1><br/>
